# task_prompt_orchestrator

./: .gitignore  .jscpd.json  Makefile  README.md  pyproject.toml
.claude/commands/: plan_requirements.md  plan_task_prompts.md  plan_tasks.md
doc/: bright-tickling-unicorn.md
examples/: sample_requirements.yaml  sample_tasks.yaml
src/task_prompt_orchestrator/: __init__.py  cli.py  cli_history.py  cli_loopb.py  cli_plan.py  loopb_history.py  loopb_tasks.py  loopb_verification.py  models.py  orchestrator.py  prompts.py  requirements_orchestrator.py  schema.py
src/task_prompt_orchestrator/templates/: __init__.py  loopb_flow_diagram.txt  plan_requirements.md  plan_tasks.md  requirement_verification.j2  sample_requirements_yaml.j2  sample_task_yaml.j2  shared_exploration.j2  single_requirement_verification.j2  task_generation_additional.j2  task_generation_base.j2  task_generation_initial.j2  task_instruction.j2  task_validation.j2
tests/: test_prompts.py  test_requirements_orchestrator.py
